# dog-test

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
cmake/: DogTest.cmake  HilTest.cmake  dogtest-config.cmake.in  hiltest-config.cmake.in
cmake/toolchains/: arm-none-eabi.cmake
docs/: architecture.md  examples.md  hil-workflow.md  rust-roadmap.md
docs-site/: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
docs-site/content/en/: index.md
docs-site/content/en/1.getting-started/: 2.installation.md  2.introduction.md  3.installation.md  3.project-structure.md  4.project-structure.md  5.first-test.md  5.troubleshooting.md  6.troubleshooting.md
docs-site/content/en/2.essentials/: 1.writing-tests.md  2.assertions.md  3.fixtures-tags.md  4.monitor-specs.md
docs-site/content/en/3.integrations/: 1.mcp-integration.md  2.llm-integration.md
docs-site/content/en/4.reference/: 1.architecture.md  2.examples.md  3.dt-workflow.md  3.hil-workflow.md  4.rust-roadmap.md  5.c-api.md  6.python-api.md
docs-site/content/fr/1.getting-started/: 4.first-test.md  5.troubleshooting.md
docs-site/content/fr/2.essentials/: .navigation.yml  1.writing-tests.md  2.assertions.md  3.fixtures-tags.md  4.monitor-specs.md
docs-site/content/fr/3.integrations/: .navigation.yml  1.mcp-integration.md  2.llm-integration.md
docs-site/content/fr/4.integrations/: .navigation.yml  1.integration-mcp.md  2.integration-llm.md
docs-site/content/fr/4.reference/: .navigation.yml  1.architecture.md  2.examples.md  3.dt-workflow.md  4.rust-roadmap.md  5.c-api.md  6.python-api.md
docs-site/content/ja/: index.md
docs-site/content/ja/1.getting-started/: .navigation.yml  1.introduction.md  2.installation.md  3.project-structure.md  4.first-test.md  5.troubleshooting.md
docs-site/content/ja/2.essentials/: .navigation.yml  1.writing-tests.md  2.assertions.md  3.fixtures-tags.md  4.monitor-specs.md
docs-site/content/ja/3.integrations/: .navigation.yml  1.mcp-integration.md  2.llm-integration.md
docs-site/content/ja/4.reference/: .navigation.yml  1.architecture.md  2.examples.md  3.dt-workflow.md  4.rust-roadmap.md  5.c-api.md  6.python-api.md
docs-site/content/ru/: index.md
docs-site/content/ru/1.getting-started/: .navigation.yml  1.introduction.md  2.installation.md  3.project-structure.md  4.first-test.md  5.troubleshooting.md
docs-site/content/ru/2.essentials/: .navigation.yml  1.writing-tests.md  2.assertions.md  3.fixtures-tags.md  4.monitor-specs.md
docs-site/content/ru/3.integrations/: .navigation.yml  1.mcp-integration.md  2.llm-integration.md
docs-site/content/ru/4.reference/: .navigation.yml  1.architecture.md  2.examples.md  3.dt-workflow.md  4.rust-roadmap.md  5.c-api.md  6.python-api.md
docs-site/plugins/: vercel-analytics.client.ts
docs-site/scripts/: check-translations.mjs
docs-site/server/mcp/tools/: docs-links.ts
examples/: CMakeLists.txt  monitor_spec_uart.json
examples/i2c_smoke/: CMakeLists.txt  main.c
examples/spi_transfer/: CMakeLists.txt  main.c
examples/uart_loopback/: CMakeLists.txt  main.c
framework/include/dogtest/: assert.h  monitor_spec.h  test_case.h
framework/include/hiltest/: assert.h  monitor_spec.h  test_case.h
framework/src/: runner.c  test_registry.c
tests/: CMakeLists.txt  test_plan_smoke.json
tests/host/: CMakeLists.txt  test_framework.c
tests/python/: test_assertions.py  test_backends.py  test_decoders.py  test_dt_runner_integration.py  test_hil_runner_integration.py  test_monitor_contract.py  test_negative_paths.py  test_serial_parsing.py
tools/: __init__.py  dt_runner.py  hil_runner.py
tools/backends/flash/: __init__.py  base.py  openocd_backend.py  pyocd_backend.py
tools/backends/lang/: rust_adapter.py
tools/backends/reset/: __init__.py  base.py  openocd_reset.py  pyocd_reset.py
tools/logic/: assertions.py  decoders.py  saleae_adapter.py
tools/specs/: monitor_contract.py
